# LiteEdit

./: .clangd  .gitmodules  CMakeLists.txt  color.md  out.txt  theme.json
include/: terminal.h
src/: main.c  terminal.c
